--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "http-status": "^2.0.0",
     "joi": "^17.13.3",
     "mongoose": "^8.8.3",
     "validator": "^13.12.0",
